# unstuck-ai

./: .env.example  .gitignore  CLAUDE.md  DOCKER_README.md  Dockerfile  GOOSE_MCP_DEBUG_LOG.md  GOOSE_SETUP.md  INTEGRATION_PROGRESS.md  PLANNED_FEATURES.md  README.md  docker-compose.yml  entrypoint.sh  goose-extension-config.yaml  setup-goose-extension.sh
agents/cua/: .env.example  .gradio_settings.json  README.md  main.py  requirements.txt  start.sh
agents/goose-docker/: .env.example  Dockerfile  GOOSE_MCP_DEBUG_LOG.md  docker-compose.yml  entrypoint.sh  install_unstuck_toolkit.py  mcp_stdio_wrapper.py  requirements.txt  start_goose.py  supervisord.conf  unstuck_toolkit.py
ai_guidance/: README.md  nostr_sdk_code_snippets.md  single_page_demo_nwc_invoice_paid_notification.html
api_server/: README.md
docs/: Pitch Deck.pptx  Unstuck Pitch Deck.pptx
frontend/: Home.fig  Unstuck Website.fig  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: footer.tsx  (+9 more)
mcp_server/: .env.example  ACTION_FORMAT.md  README.md  __init__.py  event_monitor.py  hello_world.py  payment_flow_simulator.py  pyproject.toml  requirements.txt  server.py  simple_unstuck.py  test_do_spaces_upload.py  unstuck_with_models.py  unstuck_with_models_simple.py  unstuck_with_nostr.py  unstuck_with_nostr_working.py
mcp_server/unstuck_ai/: __init__.py  __main__.py  server.py
mcp_server/utility/: README.md  event_monitor.py
ui/: mutter_startup.sh  novnc_startup.sh  tint2_startup.sh  x11vnc_startup.sh  xvfb_startup.sh
(+21 files in other folders)
